cli/tests/golden/negative/parse_error.lrl
(def broken Nat (succ zero)
